# twitter_backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.dev  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_production.txt
follows/: admin.py  factories.py  urls.py
follows/migrations/: 0001_initial.py  0002_initial.py
follows/models/: __init__.py  follows.py
follows/serializers/: __init__.py  follows_serializer.py
follows/tests/: test_follows.py  test_follows_viewset.py
follows/viewsets/: __init__.py  follows_viewset.py
tweets/: admin.py  factories.py  urls.py
tweets/migrations/: 0001_initial.py  0002_initial.py  0003_remove_tweets_likes.py  0004_tweets_likes_comments.py
tweets/models/: __init__.py  tweets.py
tweets/serializers/: __init__.py  tweets_serializer.py
tweets/tests/: test_tweets.py  test_tweets_viewset.py
tweets/viewsets/: __init__.py  tweets_viewset.py
twitter_back/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  factories.py  urls.py
users/migrations/: 0001_initial.py
users/models/: users.py
users/serializers/: __init__.py  users_serializer.py
users/tests/: test_users.py  test_users_viewset.py
users/viewsets/: users_viewset.py
